Fix vertical alignment of Signin button

--- a/client/style.css
+++ b/client/style.css
@@ -43,7 +43,7 @@ footer {
   font-size: 80%;
   z-index: 1000;
   color: #ccdcd2; }
- 
+
 footer form, .footer-item {
   display: inline;
 }
@@ -193,6 +193,8 @@ footer {
 .button:active {
   box-shadow: inset 0 0 7px #3d3c43; }
 
+#persona-login-btn { margin-bottom: -10px; margin-left: 10px; }
+
 .target {
   background-color: #ffffcc !important; }
 
@@ -322,7 +324,7 @@ textarea {
   text-align: center;
   top: -40px;
   right: 10px;
-  -webkit-transform: rotate(-15deg); 
+  -webkit-transform: rotate(-15deg);
   -moz-transform: rotate(-15deg);
 
 }
